@@ -2864,5 +2864,12 @@
 		<nsetparms>1</nsetparms>
 		<ngetparms>0</ngetparms>
 		<nansparms>1</nansparms>		
+	</catstruct>
+	<catstruct code="ZZXA">
+		<desc>Audio Amp</desc>
+		<active>true</active>
+		<nsetparms>1</nsetparms>
+		<ngetparms>0</ngetparms>
+		<nansparms>1</nansparms>
 	</catstruct>	
 </catstructs>
