@@ -9,8 +9,10 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] option in setup for S9 @ -73 or -93 for 30MHz and 144MHz (github #418)
 - [add] options added for SWR protection. Swr limits, and tune power (github #221)
 - [add] zzoa and zzoc cat commands have been added. zzoa - get/set the rx antenna based on rx1 band. zzoc - get/set the tx antenna based on tx band (github #385)
-- [add] rx antenna port selection option for XVTR. It should also revert any changes if you leave an xvtr band. Only applies to RX1 currently
-- [add] 8 diversity memories. shift click to store, ctrl click to clear
+- [add] rx antenna port selection option for XVTR. It should also revert any changes if you leave an xvtr band. Only applies to RX1 currently (github #424)
+- [add] 8 diversity memories. shift click to store, ctrl click to clear (github #263)
+- [add] zzxa cat command to get/set audio amplifier (rear speaker sockets). zzxa1; to enable, zzxa0; to disable (github #308)
+- [add] midi button command to toggle audio amplifier (rear speaker sockets) (github #308)
 - [fix] decouple of the rx1/rx2 attenuator preamp/s-att boxes from tx-att. New tx-att control, and bg colour settings in appearance (github #399)
 - [change] simplification improvements to db import
 
